style.css
* {
margin: 0;
padding: 0;
box-sizing: border-box;
overflow-x: hidden;
}
          
  body {
    background-color: #f4f2e2;
    font-size: 16px;
    line-height: 1.5;
    max-width: 100%;
    overflow-x: hidden;
  }
          
  header {
  background: #000f52;
  color: #fff;
  height: 8vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  }

  a {
  color: #fff;
  text-decoration: none;
  transition: 0.3s;
  }
          
  a:hover {
  opacity: 0.7;
  }

    .logo {
    font-size: 24px;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-family: "Helvetica", sans-serif;
    }

/* Ajustes para a navegação responsiva */
nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  height: 8vh;
  font-family: "Helvetica", sans-serif;
}

.nav-list {
  display: flex;
  list-style: none;
  position: absolute;
  right: 20px;
}

.nav-list li {
  letter-spacing: 3px;
  margin-left: 32px;
  
}

.mobile-menu {
  display: none;
  cursor: pointer;
  position: absolute;
  right: 20px;
}

.mobile-menu div {
  width: 30px;
  height: 3px;
  background-color: #fff;
  transition: 0.3s;
  margin: 8px;
}
   
@media (max-width: 999px) {
  .nav-list {
    position: absolute;
    top: 8vh;
    right: -50vw;
    width: 50vw;
    height: 80vh;
    background: #000f52;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    transform: translateX(100%);
    transition: transform 0.3s ease-in-out;
    visibility: hidden;  /* Esconde sem remover do fluxo */
    opacity: 0; /* Deixa invisível */
}

.nav-list.active {
    right: 0;
    transform: translateX(0);
    display: flex; /* Mostra o menu quando ativo */
    visibility: visible; /* Torna visível */
    opacity: 1;
  }

  .nav-list li {
    margin-left: 0;
    opacity: 0;
  }
  .mobile-menu {
    display: block;
  }
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.mobile-menu.active .line1 {
  transform: rotate(-45deg) translate(-8px, 8px);
}

.mobile-menu.active .line2 {
  opacity: 0;
}

.mobile-menu.active .line3 {
  transform: rotate(45deg) translate(-8px, -8px);
}

    /* LAYOUT PRINCIPAL */
    .hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 40px;
    gap: 20px;
    color: #000;
    }
  
  .left {
    flex: 1.5;
  }
  
  .right {
    flex: 1;
    text-align: left;
  }
  
  /* IMAGEM ESTÁTICA */
  .static-image {
    width: 100%;
    height: auto;
    border-radius: 8px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  }
  
  /* HEADLINE */
  .headline {
    font-family: "Helvetica", sans-serif;
    font-weight: 700;
    font-size: 38px;
    color: #000f52;
    line-height: 1.3;
    margin-bottom: 40px;
    
  }
  
  .yellow {
    color: #eab726;
    font-family: "Codec Pro", sans-serif;
  }
  
  /* SUBHEADLINE */

  .subheadline {
    
    font-family: "Helvetica", sans-serif;
    font-weight: 300;
    font-size: 20px;
    color: #1d1d1d;
    margin-bottom: 40px;
    line-height: 1.5;
    padding: 16px 0 0 16px;
    
  }

  .subheadline .espaco{
    display: flex;
    flex-direction: column;
    margin: 0 0 20px 0;
  }

  .destaque {
    font-weight: 700;
    color: #000f52;
  }

  hr {
    border: none;
    height: 2px;
    background: #000f52; /* Cor da linha */
    margin: 20px 0;
}
  
  /* BOTÃO */
  .cta-button {
    padding: 15px 30px;
    background-color: #eab726;
    color: #fff;
    font-family: "Codec Pro", sans-serif;
    font-weight: 600;
    font-size: 1.1rem;
    border: none;
    border-radius: 30px;
    cursor: pointer;
    box-shadow: 0 8px 20px #eab726;
    transition: all 0.3s ease;
  }
  
  .cta-button:hover {
    background-color: #eab726;
    transform: translateY(-3px);
  }
  
  /* ANIMAÇÕES DO BOTÃO */
  @keyframes fadeIn {
    from {
      opacity: 0;
      transform: translateY(-30px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }
          
  
section {
padding: 80px 20px;
}

.sobre{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: left;
  border-radius: 20px;
  border: 0px;
  padding: 30px;
  }

  .sobre h2{
    font-family: "Helvetica", sans-serif;
    font-weight: 700;
    font-size: 30px;
    color: #000f52;
    line-height: 1.3;
    margin-bottom: 30px;
  }

  .sobre p {
    font-family: "Codec Pro", sans-serif;
    padding: 30px 15px ;
    font-size: 19px;
    color: #000;
    line-height: 1.6;
    border:none;
    border-radius: 20px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
}

.sobre p:not(:last-child) {
  margin-bottom: 40px; 
}
.oportunidade {
  padding: 20px;
  margin: 30px 0;
  text-align: left;
}

.oportunidade h2 {
  font-family: "Helvetica", sans-serif;
  font-weight: 700;
  font-size: 30px;
  color: #000f52;
  line-height: 1.3;
  margin-bottom: 80px;
  margin-top: 30px;
}

.oportunidade ul {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  gap: 20px; 
  list-style: none;
  padding: 0;
}

.oportunidade li {
  flex: 1;
  text-align: center;
  justify-content: space-between;
  font-family: "Codec Pro", sans-serif;
  font-size: 20px;
  padding: 20px;
  height: 350px;
  border-radius: 8px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
}

.oportunidade img {
  max-width: 150px;
  display: block;
  margin: 55px auto 0;
}
.oportunidade li:nth-child(2) img {
  max-width: 170px;
  margin: 40px auto 0;
}

.como-funciona {
  text-align: left;
  padding: 20px;
  margin: 30px 0;
}

.como-funciona h2 {
  font-family: "Helvetica", sans-serif;
  font-weight: 700;
  font-size: 30px;
  color: #000f52;
  line-height: 1.3;
  margin-bottom: 70px;
  margin-top: 30px;
}

.conteudo {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
  flex-direction: row; /* Mantém o texto à esquerda e a imagem à direita */
}

.fazenda-img {
  width: 50%;
  max-width: 800px;
  border-radius: 15px;
}

.etapas {
  font-size: 18px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  max-width: 50%; /* Para o texto ocupar metade da largura */
}

.etapa {
  
  padding: 15px 25px;
  border-radius: 20px;
  max-width: 600px;
  font-size: 1.2em;
  text-align: left;
  font-family: "Codec Pro", sans-serif;
}

.etapa:nth-child(odd) {
  background-color: #F2B52A;
  color: white;
}

.etapa:nth-child(even) {
  background-color: #001B50;
  color: white;
}
.etapa:not(:last-child) {
  margin-bottom: 20px; 
}

.vantagens {
  padding: 20px;
  margin: 30px 0;
}

.vantagens h2 {
  font-family: "Helvetica", sans-serif;
    font-weight: 700;
    font-size: 30px;
    color: #000f52;
    line-height: 1.3;
    margin-bottom: 50px;
}

.vantagens-container {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  gap: 20px; 
  list-style: none;
  padding: 0;
}

.vantagem {
  flex: 1;
  text-align: center;
  justify-content: space-between;
  font-family: "Codec Pro", sans-serif;
  font-size: 20px;
  padding: 20px;
  height: 380px;
  border-radius: 8px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
}

.vantagem img {
  width: 45%;
  border-radius: 10px;
}

.vantagem h3 {
  font-size: 1.2em;
  margin: 15px 0;
  color: #000f52;
  text-align: left;
}

.vantagem p {
  font-size: 1em;
  color: #000;
  text-align: left;
}

.contato {
  text-align: center;
  padding: 100px 0;
  margin: 100px 100px 50px 100px;
  border-radius: 8px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
}

.contato h2 {
  font-family: "Helvetica", sans-serif;
    font-weight: 700;
    font-size: 40px;
    color: #000f52;
    line-height: 1.3;
    margin-bottom: 50px;
}

.contato p {
  font-size: 25px;
  font-family: "Codec Pro", sans-serif;
  margin-bottom: 30px;
}

.contact-container {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
  margin-top: 20px;
}

.contact-item {
  display: flex;
  align-items: center;
  gap: 25px;
  font-size: 20px;
  font-family: "Helvetica", sans-serif;
  background: rgba(255, 255, 255, 0.1);
  padding: 20px 20px 0 20px;
  border-radius: 8px;
  transition: 0.3s ease;
  border-radius: 15px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  justify-content: center;
}

.contact-item:hover {
background: rgb(0, 15, 82, 0.1);
}

.contact-item img {
  width: 24px;
  height: 24px;
}

.contact-item a {
  color: rgb(0, 15, 82);
  font-weight: 600;
  text-decoration: none;
  transition: 0.3s;
}

.contact-item a:hover {
  text-decoration: underline;
}

footer {
  background: rgb(0, 15, 82);
  color: #fff;
  text-align: center;
  padding: 20px 0;
  font-size: 15px;
  font-family: "Helvetica", sans-serif;
  gap: 20px;
}

footer p {
  opacity: 0.8;
}

.ajuste {
  margin-bottom: 10px;
  font-weight: 600;
}

.ajuste2 {
  font-family: "Codec Pro", sans-serif;
}

@media (max-width: 1024px) {
  
  .hero {
      flex-direction: column;
      text-align: center;
      
  }

  .vantagem {
    height: 420px;
  }
}
@media (max-width: 768px) {
  .hero .right {
      padding: 20px;
      text-align: center;
      justify-items: center;
      justify-content: center;
      align-items: center;
  }
  
  .hero .headline, .hero .subheadline {
      text-align: center;
      
  }
  .headline {
    font-size: 3rem;
  }
  .subheadline {
    font-size: 2rem;
  }

  .cta-button {
      font-size: 2rem;
      padding: 10px 20px;
  }
  
  .sobre p {
    font-size: 1.7rem;
  }

  .oportunidade ul, .vantagens-container {
      display: flex;
      flex-direction: column;
      align-items: center;
      
  }

  
  
  .contato {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
      padding: 20px;
      margin: 20px 30px;
  }
  
  .contact-container {
      display: flex;
      flex-direction: column;
      gap: 10px;
      width: 100%;
      max-width: 600px;
  }
  
  .contact-item p {
      font-size: 1.5rem;
  }
}

@media (max-width: 480px) {

  .right{
    text-align: center;
      justify-items: center;
      justify-content: center;
      align-items: center;
  }

  .headline {
      font-size: 1.2rem;
      text-align: center;
  }

  .yellow {
    font-size: 2rem;
  }
  
  .subheadline {
      font-size: 1.1rem;
      text-align: center;
  }
  
  .cta-button {
      font-size: 19px;
      padding: 10px 15px;
  }
  
  .contact-item {
      display: flex;
      align-items: center;
      gap: 8px;
      max-width: 400px;
      width: 100%;
  }
  
  .como-funciona .conteudo {
      flex-direction: column;
      align-items: center;
      text-align: center;
  }
  
  .como-funciona .fazenda-img {
      order: -1;
      width: 100%;
      height: auto;
      margin-bottom: 15px;
      max-width: 400px;
  }
  
  .etapas {
    max-width: 100%; 
  }

  .contact-container {
      width: 100%;
      max-width: 400px;
  }
  
  

  .contact-item p {
      font-size: 1rem;
      word-break: break-word;
     
  }

  .contato {
    max-width: 100%; 
    padding: 11px;
    margin: 15px;
}

.contato p { 
    font-size: 1.2rem;
}

.contact-item p img{
    max-width: 100%;
    align-items: center;
    text-align: center;
    justify-content: center;
    justify-items: center;
    
}

  .ajuste2 {
    font-size: 0.7rem;
  }
}

@media (max-width: 320px) {

  .right{
    text-align: center;
      justify-items: center;
      justify-content: center;
      align-items: center;
  }

  .yellow {
    font-size: 1.9rem;
  }

  .cta-button {
    font-size: 15px;
    padding: 5px 7px;
}

.contact-item p {
  font-size: 0.9rem;
  word-break: break-word;
}
.ajuste2 {
  font-size: 0.6rem;
}
}

